# ChangeLog for media-libs/openal
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/ChangeLog,v 1.172 2014/01/31 14:50:30 ssuominen Exp $

  31 Jan 2014; Samuli Suominen <ssuominen@gentoo.org> openal-1.15.1-r1.ebuild:
  Build alstream (example application) only for native ABI to avoid dependency
  on FFmpeg wrt #497768 by Andy Kittner and Chris Slycord

  31 Dec 2013; Alexis Ballier <aballier@gentoo.org> openal-1.15.1-r1.ebuild:
  properly disable alstream if non native abi; reported by Michael
  Mair-Keimberger (iamnr3) in bug #484060

  30 Dec 2013; Alexis Ballier <aballier@gentoo.org> openal-1.15.1-r1.ebuild:
  fix blocker on emul-sdl abi_x86_32 useflag

  30 Dec 2013; Alexis Ballier <aballier@gentoo.org> openal-1.15.1-r1.ebuild:
  fix multilib ebuild by Michael Mair-Keimberger (iamnr3) in bug #484060 and
  slat it for emul-sdl -r1

  06 Sep 2013; Ian Stakenvicius <axs@gentoo.org> openal-1.15.1-r1.ebuild:
  dropped some unnecessary emul-linux blocker atoms

*openal-1.15.1-r1 (06 Sep 2013)

  06 Sep 2013; Ian Stakenvicius <axs@gentoo.org> +openal-1.15.1-r1.ebuild:
  converted to support multilib-build; commit OKd by radhermit

  20 Jan 2013; Samuli Suominen <ssuominen@gentoo.org> -openal-1.13.ebuild,
  -openal-1.14.ebuild, -openal-1.15.ebuild:
  old

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> openal-1.15.1.ebuild:
  Stable for alpha, wrt bug #440002

  06 Jan 2013; Markus Meier <maekke@gentoo.org> openal-1.15.1.ebuild:
  arm stable, bug #440002

  05 Jan 2013; Agostino Sarubbo <ago@gentoo.org> openal-1.15.1.ebuild:
  Stable for sparc, wrt bug #440002

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org> openal-1.15.1.ebuild:
  Stable for ia64, wrt bug #440002

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org> openal-1.15.1.ebuild:
  Stable for ppc64, wrt bug #440002

  02 Jan 2013; Agostino Sarubbo <ago@gentoo.org> openal-1.15.1.ebuild:
  Stable for amd64, wrt bug #440002
