@@ -1,6 +1,13 @@
 # ChangeLog for media-libs/openal
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/ChangeLog,v 1.172 2014/01/31 14:50:30 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/ChangeLog,v 1.173 2014/01/31 14:56:26 ssuominen Exp $
+
+*openal-1.15.1-r2 (31 Jan 2014)
+
+  31 Jan 2014; Samuli Suominen <ssuominen@gentoo.org> +openal-1.15.1-r2.ebuild:
+  Remove USE="alstream" (example application build w/ -DEXAMPLES=ON) to drop
+  FFMpeg dependency wrt #481670 because upstream moved all examples to SDL in
+  git and because it fails to compile with certain versions of libav.
 
   31 Jan 2014; Samuli Suominen <ssuominen@gentoo.org> openal-1.15.1-r1.ebuild:
   Build alstream (example application) only for native ABI to avoid dependency
